--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ h1,h2,h3,h4,h5{
     float: right;
 }
 .gray-bg{
-    background-color: rgb(235, 235, 235);
+    background-color: #eee;
 }
 /*标签样式*/
 .app{
@@ -31,7 +31,7 @@ h1,h2,h3,h4,h5{
     width: 1300px;
     margin: 0 auto;
     margin-top: 30px;
-    border: 1px solid rgb(156, 156, 156);
+    border: 1px solid #888;
     padding-top: 20px;
 }
 .commodity input{
